--- a/self-portfolio/src/index.css
+++ b/self-portfolio/src/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+/* CSS HEX */
+:root{
+  --violet-color-wheel: #7e00f5ff;
+  --sonic-silver: #7a7a7aff;
+  --bistre: #2b2118ff;
+  --violet-blue: #3d43a4ff;
+  --madder-lake: #c13336ff;
+}
+
+html{
+  background-color: var(--bistre);
+  color: var(--violet-blue);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,4 +28,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.selected{
+  color: var(--madder-lake);
 }
